Add ColorPanelComponent, set logic and styles for this

--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -4,5 +4,8 @@
     padding: 2px 5px;
     border-radius: 3px;
     font: 500 18px "Crimson", sans;
-    color: #282e33;
+}
+
+.theme-red .form-submit {
+    background-color: #7c3838;
 }
