--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -3,5 +3,8 @@
     background-color: #2a9aef;
     padding: 3px 5px;
     border-radius: 3px;
-    color: #282e33;
+}
+
+.theme-red .form-input {
+    background-color: #b44e47;
 }
