--- a/src/pages/TodoList.css
+++ b/src/pages/TodoList.css
@@ -1,8 +1,4 @@
-body {
-    background: #2a9aef;
-}
-
-.todo-flex_container {
+.todo_flex-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -12,20 +8,25 @@ body {
 
 .todo-header {
     font: 500 60px "Crimson", serif;
-    color: #282e33;
     margin: 0;
 }
 
 .todo-list {
-    background-color: #448dc5;
     width: 350px;
     height: 350px;
-    border: #4f7a9b solid 1px;
+    box-shadow: 0px 0px 10px rgb(0, 0, 0);
     border-radius: 5px;
+    background-color: #448dc5;
+}
+
+.theme-red .todo-list {
+    background-color: #883e3a;
+    box-shadow: 0px 0px 10px rgb(0, 0, 0);
+    border: none;
 }
 
 .list-container {
-    height: 250px;
+    height: 300px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
